devops/k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-front
  namespace: ns-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-front
  template:
    metadata:
      labels:
        app: next-front
    spec:
      imagePullSecrets:
        - name: harbor-image-secret
      hostAliases:
        - ip: "172.16.1.99"
          hostnames:
            - "identity.dev.ktcloudservice.com"
      containers:
        - name: next-front
          image: harbor-md-dev.ktcloud.com/kt-cloud-next/front:latest # 추후 수정
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      dnsPolicy: ClusterFirst
