devops/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-front
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: next-front
  sessionAffinity: None
  type: ClusterIP
